Issue #267  Bug             - SPAM bounce loop
Issue #275  Bug             - MailWatch updater adds duplicate SHOW_GREYLIST definitions
Issue #276  Bug             - EFA-Configure Option 11 logic error
Issue #286  Bug             - Postmaster set to empty interferes with postfix
Issue #287  Bug             - Rules without Descriptions
Issue #297  Bug             - KAM.cf URL needs updated

############################################################
EFA Version 3.0.1.1 Changes
############################################################

Issue #201  Bug          - Deprecated release-msg.cgi (deployed)
Issue #253  Bug          - EFA-Backup ssl folder (deployed)
Issue #260  Bug          - Header in Apache Settings wrong (deployed)
Issue #261  Bug          - learn-msg.cgi wrong path for sa-learn (deployed)
Issue #273  Security     - MailWatch Configuration Vulnerability
Issue #274  Bug          - Broken menu options in 3.0.1.0

############################################################
EFA Version 3.0.1.0 Changes
############################################################

Issue #201  Bug          - Deprecated release-msg.cgi
Issue #236  Enhancement  - Disable spam not delivered messages by default
Issue #253  Bug          - EFA-Backup ssl folder
Issue #260  Bug          - Header in Apache Settings wrong
Issue #261  Bug          - learn-msg.cgi wrong path for sa-learn
Issue #262  Bug          - MS_LOGO and MW_LOGO Definitions Needed
Issue #268  Enhancement  - EFA-Init link test without DHCP dependency
Issue #269  Bug          - SQL error during rename of host name in EFA-Configure
PR    #270  Bug          - Typo in RELEASENOTES
Issue #272  Security     - MailWatch Vulnerability

############################################################
EFA Version 3.0.0.9 Changes
############################################################

Issue #39   Enhancement  - Add link for Webmin in MailWatch
Issue #96   Enhancement  - Reconfigure to permit regular yum updates